After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736284 - Keep only one list of signal emissions
Keep only one list of signal emissions
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gobject
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-09-08 19:34 UTC by Benjamin Otte (Company)
Modified: 2014-10-12 00:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
signal: Keep only one list of emissions (6.99 KB, patch)
2014-09-08 19:34 UTC, Benjamin Otte (Company)
committed Details | Review

Description Benjamin Otte (Company) 2014-09-08 19:34:25 UTC
While looking through glib for uses of G_HAVE_GROWING_STACK to get rid of it
to simplify cross-compiling I found only this one. It doesn't seem to be
necessary to differentiate between those 2 types of signals, so I simplified
the code.

I found out later that G_HAVE_GROWING_STACK is public API (yay!).

Fwiw what the code is doing in the first place is only correct in
single-threaded signal emissions as there is no guarantee that the thread
emitting the signal first is having its stack in a lower/higher memory area.
But I guess nobody ever emits the same signal on the same object twice from
different threads anyway...
Comment 1 Benjamin Otte (Company) 2014-09-08 19:34:28 UTC
Created attachment 285671 [details] [review]
signal: Keep only one list of emissions

There is no need to keep 2 lists.

This simplifies the code and gets rid of the only user inside glib of
G_HAVE_GROWING_STACK.
Comment 2 Stefan Sauer (gstreamer, gtkdoc dev) 2014-09-15 15:10:14 UTC
Looks good and is a nice simplification.
Comment 3 Benjamin Otte (Company) 2014-10-12 00:00:33 UTC
Comment on attachment 285671 [details] [review]
signal: Keep only one list of emissions

I more or less accidentally pushed this patch to master.
Which kinda means I had accidentally been using this patch for the last months.

So I'll eave it in unless somebody wants it back out, then go revert it and reopen this bug.